crates/zendriver-mcp/tests/snapshots/schema_snapshots__datadome_snaps__datadome_solve_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::datadome::SolveDataDomeInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: SolveDataDomeInput
description: "Input for `browser_solve_datadome`."
type: object
properties:
  poll_interval_ms:
    description: "Override the bypass driver's internal poll cadence, in milliseconds."
    type:
      - integer
      - "null"
    format: uint64
    minimum: 0
  timeout_ms:
    description: "Maximum total wait for a terminal outcome, in milliseconds. Default\n30_000 (30s)."
    type: integer
    format: uint64
    default: 30000
    minimum: 0
  with_interception:
    description: "Enable the Fetch-domain interception fast-path. Default `false`."
    type: boolean
    default: false
additionalProperties: false
