crates/zendriver-mcp/tests/snapshots/schema_snapshots__datadome_snaps__datadome_solve_out.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::datadome::SolveDataDomeOutput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: SolveDataDomeOutput
description: "Output of `browser_solve_datadome`."
type: object
properties:
  datadome:
    description: "datadome cookie value. Populated only when `outcome == cleared`."
    type:
      - string
      - "null"
  outcome:
    description: Which terminal state the bypass reached.
    $ref: "#/$defs/Outcome"
required:
  - outcome
$defs:
  Outcome:
    description: Terminal outcome of a DataDome bypass attempt.
    oneOf:
      - description: "datadome cookie acquired (value in [`SolveDataDomeOutput::datadome`])."
        type: string
        const: cleared
      - description: Body markers cleared without a datadome cookie.
        type: string
        const: challenge_gone
      - description: No DataDome surface present at call time (fast path).
        type: string
        const: already_clear
      - description: "`window.dd.t == 'bv'` — IP banned. Caller must change IP."
        type: string
        const: blocked
      - description: "`timeout_ms` elapsed without a terminal state. Not a hard error."
        type: string
        const: timeout
